<resources>
    <string name="app_name">Save香</string>
    <string name="home">主页</string>
    <string name="service">服务汇</string>
    <string name="phone"></string>
    <string name="date">香亲汇</string>
    <string name="mine">我的</string>
    <string name="register">注册</string>
    <string name="phonenumber">手机号码</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="back_login">返回登录</string>
    <string name="forget_password">忘记密码？</string>
    <string name="find_password">找回密码</string>
    <string name="user_agreement_detail">用户协议</string>
    <string name="find_password_phone">请输入账号绑定的手机号</string>
    <string name="input_phone">请输入手机号</string>
    <string name="input_text">请输入验证码</string>
    <string name="find_password_text">请输入短信验证码</string>
    <string name="set_password">请设置密码</string>
    <string name="get_phone_text">获取验证码</string>
    <string name="confirm_push">确认提交</string>
    <string name="complete_register">完成注册</string>
    <string name="user_agreement">注册即表明您同意我们的</string>
    <string name="save_agreement"><u>留香生活协议</u></string>
    <string name="join_happytown">加入留香生活</string>
    <string name="login_hint">如您已是“幸福绿城APP用户”，无需注册可直接登录</string>
    <string name="register_hint1">如您已是“幸福绿城APP”用户</string>
    <string name="register_hint2">无需注册可返回直接登录</string>
    <string name="real_name">请输入真实姓名</string>
    <string name="service_order">我的服务订单</string>
    <string name="rob_house">我的认筹及抢房</string>
    <string name="my_date">我的香亲汇</string>
    <string name="my_grade">我的积分</string>
    <string name="my_setting">我的设置</string>
    <string name="change_name">修改昵称</string>
    <string name="nickname">请输入您的昵称</string>
    <string name="telphone">联系电话</string>
    <string name="quit_account">退出账号</string>
    <string name="my_phone">159***2108</string>
    <string name="change_pwd">修改登录及密码</string>
    <string name="change_loginpwd">修改登录密码</string>
    <string name="old_pwd">请输入原密码</string>
    <string name="new_pwd">请输入新密码</string>
    <string name="old_phone">请输入旧号码</string>
    <string name="new_phone">请输入新号码</string>
    <string name="change_phone">修改手机号码</string>
    <string name="my_service_orders">我的服务订单</string>
    <string name="setting">设置</string>
    <string name="give_advice">给我们建议</string>
    <string name="check_update">检查更新</string>
    <string name="invite_family">邀请家人朋友</string>
    <string name="help">帮助</string>
    <string name="about_savelife">关于留香生活</string>
    <string name="comment_remind">评论提醒</string>
    <string name="give_suggestion">给我们建议</string>
    <string name="advice">欢迎您提出宝贵的意见建议，您留下的每个文字都将用来改善我们的软件</string>
    <string name="confirm_newpwd">确认新密码</string>
    <string name="change_nickname">修改昵称</string>
    <string name="my_data">我的资料</string>
    <string name="app_version">版本号：1.1</string>
    <string name="greentown_liuxiang">绿城留香园</string>
    <string name="instant_app">扫描二维码，直接安装留香生活-app</string>
    <string name="instant_app_throughqq">微信、QQ和短信发送链接邀请进行安装</string>
    <string name="grade">积分:</string>
    <string name="my_image">头像</string>
    <string name="message">消息</string>
    <string name="navigation">导航</string>
    <string name="nickname_hint">为保护个人隐私，在与邻居交互时将显示昵称，默认为真实姓名，您可以自行修改</string>
    <string name="grade_num">158</string>
</resources>
