<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@id/back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:layout_marginLeft="@dimen/margin_left"
        android:clickable="true"
        android:layout_marginTop="@dimen/name_margin_left">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/back" />

        <TextView
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/back_margin_left"
            android:text="@string/back_login"
            android:textColor="@color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/join_happytown"
            android:textColor="@color/black"
            android:textSize="@dimen/join_savelife" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_left">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_hint1"
            android:textColor="@color/black"
            android:textSize="@dimen/login_size" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/register_hint2"
            android:textColor="@color/black"
            android:textSize="@dimen/login_size" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginTop="@dimen/name_margin_top"
            android:hint="@string/real_name"
            android:layout_marginBottom="@dimen/name_margin_small"
            android:background="@null"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left">

            <EditText
                android:id="@id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/butterfly"
                android:hint="@string/input_phone"
                android:layout_centerInParent="true"
                android:background="@null"
                android:inputType="textEmailAddress" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="@dimen/phone_text"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/text_small_margin"
                android:layout_marginTop="@dimen/text_small_margin"
                android:background="@color/darklogin"
                android:text="@string/get_phone_text"
                android:textColor="@color/white" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/name_margin_top"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:hint="@string/input_text"
            android:layout_centerInParent="true"
            android:background="@null"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/name_margin_top"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginBottom="@dimen/text_small_margin"
            android:background="@null"
            android:hint="@string/set_password"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/name_margin_left"
        android:layout_marginRight="@dimen/name_margin_left"
        android:layout_marginTop="@dimen/tab_top_fontsize"
        android:background="@color/darklogin"
        android:text="@string/complete_register"
        android:textColor="@color/white" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/name_margin_small">

        <TextView
            android:id="@id/user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/user_agreement"
            android:text="@string/save_agreement" />
    </RelativeLayout>

</LinearLayout>
