<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/titlecolor">

        <ImageView
            android:id="@id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left"
            android:text="@string/login"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/find_password"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_left" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:layout_marginTop="@dimen/name_margin_top">

            <EditText
                android:id="@id/phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/butterfly"
                android:hint="@string/find_password_phone"
                android:inputType="textEmailAddress" />

            <Button

                android:layout_width="wrap_content"
                android:layout_height="@dimen/phone_text"
                android:background="@color/darklogin"
                android:layout_alignParentRight="true"
                android:text="@string/get_phone_text"
                android:textColor="@color/white" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:hint="@string/find_password_text"
            android:inputType="textEmailAddress" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />
    </LinearLayout>




    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/name_margin_left"
        android:layout_marginRight="@dimen/name_margin_left"
        android:layout_marginTop="@dimen/tab_top_fontsize"
        android:background="@color/darklogin"
        android:text="@string/confirm_push"
        android:textColor="@color/white" />


</LinearLayout>
