<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_loginpwd"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.xiaoge.fragmenttabhostdemo.activity.change_loginpwd">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:background="@color/titlecolor">

        <RelativeLayout
            android:id="@id/back"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/titlecolor"
            android:clickable="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/name_margin_small"
                android:src="@mipmap/back" />

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/name_margin_left"
                android:text="@string/my_data"
                android:textColor="@color/black" />


        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/change_loginpwd"
            android:textColor="@color/black"
            android:textSize="@dimen/margin_left" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_yellow"
        android:orientation="vertical">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/name_margin_top"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:background="@null"
            android:hint="@string/old_pwd" />


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/name_margin_top"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:background="@null"
            android:hint="@string/new_pwd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/name_margin_top"
            android:layout_below="@id/butterfly"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:background="@null"
            android:hint="@string/confirm_newpwd" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="@dimen/name_margin_left"
            android:layout_marginRight="@dimen/name_margin_left"
            android:background="@color/black" />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/name_margin_left"
        android:layout_marginRight="@dimen/name_margin_left"
        android:layout_marginTop="@dimen/tab_top_fontsize"
        android:background="@color/title_blue"
        android:text="@string/confirm_push"
        android:textColor="@color/white" />
</LinearLayout>
